--- a/client/.env.production
+++ b/client/.env.production
@@ -1,8 +1,8 @@
 # Production Environment Variables for Frontend
-# These will be set in Vercel dashboard
+# Set these in Vercel dashboard for client deployment
 
-# API Configuration
-VITE_API_BASE_URL=https://your-vercel-app.vercel.app/api
+# API Configuration - UPDATE WITH YOUR ACTUAL SERVER URL
+VITE_API_BASE_URL=https://servisbet-server-git-main-horlartundheys-projects.vercel.app/api
 
 # App Configuration
 VITE_APP_NAME=ServisbetA
@@ -12,7 +12,3 @@ VITE_APP_ENVIRONMENT=production
 # Feature Flags
 VITE_ENABLE_ANALYTICS=true
 VITE_ENABLE_ERROR_REPORTING=true
-
-# External Services (if needed)
-# VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key
-# VITE_ANALYTICS_ID=your_analytics_id
