--- a/server/.env
+++ b/server/.env
@@ -9,7 +9,8 @@ DB_NAME=test
 
 # CORS Settings
 CLIENT_URL=http://localhost:5173
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173,http://127.0.0.1:3000
+CLIENT_URL=https://servisbet-client.vercel.app
+ALLOWED_ORIGINS=https://servisbet-client.vercel.app,https://servisbet-git-main-horlartundheys-projects.vercel.app
 
 # Cloudinary Configuration
 CLOUDINARY_CLOUD_NAME=dwgyu7pr9
