--- a/client/.env.production
+++ b/client/.env.production
@@ -1,8 +1,8 @@
 # Production Environment Variables for Frontend
 # Set these in Vercel dashboard for client deployment
 
-# API Configuration - UPDATE WITH YOUR ACTUAL SERVER URL
-VITE_API_BASE_URL=https://servisbet-server-git-main-horlartundheys-projects.vercel.app/api
+# API Configuration - UPDATED WITH ACTUAL SERVER URL
+VITE_API_BASE_URL=https://servisbet-git-main-horlartundheys-projects.vercel.app/api
 
 # App Configuration
 VITE_APP_NAME=ServisbetA
