--- a/server/.env
+++ b/server/.env
@@ -8,7 +8,7 @@ NODE_ENV=development
 DB_NAME=test
 
 # CORS Settings
-CLIENT_URL=http://localhost:5173
+# CLIENT_URL=http://localhost:5173
 CLIENT_URL=https://servisbet-client.vercel.app
 ALLOWED_ORIGINS=https://servisbet-client.vercel.app,https://servisbet-git-main-horlartundheys-projects.vercel.app
 
