Test: minimal server to isolate path-to-regexp error

--- a/server/.env
+++ b/server/.env
@@ -9,8 +9,8 @@ DB_NAME=test
 
 # CORS Settings
 # CLIENT_URL=http://localhost:5173
-CLIENT_URL=https://servisbet-client.vercel.app
-ALLOWED_ORIGINS=https://servisbet-client.vercel.app,https://servisbet-git-main-horlartundheys-projects.vercel.app
+# CLIENT_URL=https://servisbet-client.vercel.app
+# ALLOWED_ORIGINS=https://servisbet-client.vercel.app,https://servisbet-git-main-horlartundheys-projects.vercel.app
 
 # Cloudinary Configuration
 CLOUDINARY_CLOUD_NAME=dwgyu7pr9
