--- a/client/.env.production
+++ b/client/.env.production
@@ -2,7 +2,8 @@
 # Set these in Vercel dashboard for client deployment
 
 # API Configuration - UPDATED WITH ACTUAL SERVER URL
-VITE_API_BASE_URL=https://servisbet-git-main-horlartundheys-projects.vercel.app/api
+VITE_API_BASE_URL=https://servisbeta-server.vercel.app/api
+VITE_CLIENT_URL=https://servisbet-client.vercel.app
 
 # App Configuration
 VITE_APP_NAME=ServisbetA
