Implement comprehensive SEO improvements and slug-based navigation
- Add SEO-friendly URL slugs for all businesses
- Implement dynamic meta tags and structured data (JSON-LD)
- Add breadcrumb navigation components
- Generate XML sitemap and robots.txt
- Update brand name from ServisbetA to Servisbeta
- Fix business detail page to show correct content for each business
- Fix review loading to use business ObjectId instead of slug
- Add ScrollToTop component for better navigation UX
- Implement hash-based section scrolling (/#services, /#process)
- Remove Analytics link from navigation
- Ensure pages load from top on navigation
- Update getBusinessBySlug endpoint with proper data transformation

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "ServisbetA Business Directory",
-  "short_name": "ServisbetA",
+  "name": "Servisbeta Business Directory",
+  "short_name": "Servisbeta",
   "description": "Business review and directory platform",
   "start_url": "/",
   "display": "standalone",
