--- a/server/.env
+++ b/server/.env
@@ -9,7 +9,7 @@ DB_NAME=test
 
 # CORS Settings
 # CLIENT_URL=http://localhost:5173
-# CLIENT_URL=https://servisbet-client.vercel.app
+CLIENT_URL=https://servisbeta.com
 # ALLOWED_ORIGINS=https://servisbet-client.vercel.app,https://servisbet-git-main-horlartundheys-projects.vercel.app
 
 # Cloudinary Configuration
@@ -34,3 +34,8 @@ MAX_FILES_PER_REQUEST=10
 
 # Security
 BCRYPT_SALT_ROUNDS=12
+
+# Paystack Configuration (TEST MODE)
+PAYSTACK_PUBLIC_KEY=pk_test_xxxxxxxxxxxxx
+PAYSTACK_SECRET_KEY=sk_test_xxxxxxxxxxxxx
+PAYSTACK_WEBHOOK_SECRET=xxxxxxxxxxxxx
